--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,7 +17,11 @@
     "views": "views",
     "visit": "visit",
     "visits": "visits",
-    "copied": "copied"
+    "copied": "copied",
+    "cancel": "cancel",
+    "delete": "delete",
+    "item": "item",
+    "items": "items"
   },
   "dataTypes": {
     "browsing": {
@@ -92,6 +96,12 @@
   "explore": {
     "statistics": {
       "header": "Statistics"
+    },
+    "table": {
+      "delete": {
+        "confirm": "Are you sure you want to delete {{n}} {{items}}?",
+        "dontask": "Do not ask again"
+      }
     }
   },
   "gather": {
