--- a/public/locales/nl/translation.json
+++ b/public/locales/nl/translation.json
@@ -49,6 +49,8 @@
       "question": "In welke mate gaat de content van dit kanaal over nieuws of actualiteiten?"
     },
     "confirm": {
+      "server": "Uw data wordt verstuurd naar",
+
       "button": "Doneer je gegevens",
       "buttonRetry": "Probeer nog een keer te versturen",
       "thankyou": "Bedankt voor je donatie!",
@@ -214,11 +216,12 @@
       "p2": "U kunt een selectie van deze gegevens ook doneren voor wetenschappelijk onderzoek. Deze gegevens worden alleen gebruikt voor <b>niet-commercieel onderzoek</b> door een selecte groep wetenschappers, voor onderzoek dat is goedgekeurd door het ethisch bestuur van hun universiteit.",
       "subheader1": "Verzamel en verken uw digitale voetafdruk",
       "subheader2": "Doneer data ter ondersteuning van wetenschappelijk onderzoek",
-      "testuser": {
-        "button": "Log in als testgebruiker",
+      "noid": {
+        "testuser": "Log in als testgebruiker",
+        "customid": "Log in met ID",
         "header": "INLOGGEN ALS TESTGEBRUIKER",
         "p1": "De link die u naar deze website bracht, bevatte geen gebruikers-ID. Als u deelneemt aan een onderzoek, zou dit niet mogelijk moeten zijn en dient u contact op te nemen met de onderzoekers of het onderzoeksbureau.",
-        "p2": "Als testgebruiker worden uw echte gegevens niet naar een server gestuurd. Als u de stappen voor gegevensdonatie voltooit, ontvangt de server een dummy-inzending met nepgegevens."
+        "p2": "U kunt zelf een ID invullen, of inloggen als testgebruiker. Als testgebruiker worden uw echte gegevens niet naar een server gestuurd. Als u de stappen voor gegevensdonatie voltooit, ontvangt de server een dummy-inzending met nepgegevens."
       }
     }
   }
