--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -176,7 +176,7 @@
       "title": "Step 3. Donate"
     },
     "explore": {
-      "description": "This step is optional, but aren't you curious?",
+      "description": "This step is optional (and not that relevant for TikTok data)",
       "title": "Step 2. Explore"
     },
     "gather": {
