--- a/public/locales/nl/translation.json
+++ b/public/locales/nl/translation.json
@@ -178,7 +178,7 @@
       "title": "Stap 3. Doneren"
     },
     "explore": {
-      "description": "Deze stap is optioneel, maar ben je niet nieuwsgierig?",
+      "description": "Deze stap is optioneel (en niet relevant voor TikTok data)",
       "title": "Stap 2. Verkennen"
     },
     "gather": {
